fix link colour to be visible on blue background

--- a/site/static/css/custom.css
+++ b/site/static/css/custom.css
@@ -1,3 +1,8 @@
+/* GENERAL STYLING */
+.bg-primary a {
+  color: #fff;
+}
+
 /* SUBPAGES */
 .subpage {
   background-image: url(../img/header.jpg);
